@@ -10,7 +10,11 @@ IF(HAVE_SYS_SOUNDCARD_H)
 ENDIF(HAVE_SYS_SOUNDCARD_H)
 FIND_FILE (HAVE_LINUX_SOUNDCARD_H linux/soundcard.h)
 IF(HAVE_LINUX_SOUNDCARD_H)
-   	ADD_DEFINITIONS(-DHAVE_LINUX_SOUNDCARD_H)
+    ADD_DEFINITIONS(-DHAVE_LINUX_SOUNDCARD_H)
+    FIND_LIBRARY(HAVE_LIBOSSAUDIO "ossaudio")
+    IF(HAVE_LIBOSSAUDIO)
+        LIST(APPEND EXTRA_LIBS "ossaudio")
+    ENDIF(HAVE_LIBOSSAUDIO)
 ENDIF(HAVE_LINUX_SOUNDCARD_H)
 
 LIST(APPEND EXTRA_LIBS  paranoia)
@@ -25,5 +29,5 @@ SET_TARGET_PROPERTIES(icedax PROPERTIES  SKIP_BUILD_RPATH TRUE)
 
 INSTALL(TARGETS icedax DESTINATION bin)
 INSTALL(PROGRAMS pitchplay readmult cdda2mp3 cdda2ogg DESTINATION bin)
-INSTALL(FILES cdda2ogg.1 icedax.1 pitchplay.1 readmult.1 list_audio_tracks.1 DESTINATION share/man/man1)
+INSTALL(FILES cdda2ogg.1 icedax.1 pitchplay.1 readmult.1 list_audio_tracks.1 DESTINATION ${MANSUBDIR}/man1)
 
