@@ -16,4 +16,4 @@ SET_TARGET_PROPERTIES(readom PROPERTIES  SKIP_BUILD_RPATH TRUE)
 INSTALL(TARGETS readom DESTINATION bin)
 INSTALL(FILES 
 readom.1
-DESTINATION share/man/man1)
+DESTINATION ${MANSUBDIR}/man1)
