@@ -34,4 +34,4 @@ SET_TARGET_PROPERTIES(wodim PROPERTIES SKIP_BUILD_RPATH TRUE)
 INSTALL(TARGETS wodim DESTINATION bin)
 INSTALL(FILES 
    wodim.1
-DESTINATION share/man/man1)
+DESTINATION ${MANSUBDIR}/man1)
